# hamsa

./: .gitignore  Doxyfile  README.md
AsymptoticComplexity/: InferCpx  InferForComplexity.cpp  for1.cpp  temp.txt
docker/: Dockerfile  README.md  readme.md
docs/: LoopInfoTool_8hpp_source.html  annotated.html  classLoopInfoAction-members.html  classLoopInfoAction.html  classLoopInfoConsumer-members.html  classLoopInfoConsumer.html  classLoopInfoVisitor-members.html  classLoopInfoVisitor.html  classes.html  dir_1de7b2ea35d69b0dee3ae3094c2845aa.html  dir_2a05f25c069d808f7ace6146417831f3.html  dir_728e8e3597b838df3c5f00c2c46711d3.html  dir_7fde8c0153f2bf917d29c55018f159d2.html  dir_899e1fbeef716011e081bf4c8c5e8370.html  dir_991ceb2cc9ba0a93addf99ea56002978.html  dir_ab246f1c5ee81708af75d3a80d295bf5.html  dir_dd558a436f7a71cc0cd8d62af951fe49.html  dir_ebce685cb0b6f886ca7190de9a94a524.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md_README.html  pages.html
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js
src/: run.sh
src/ASTMatcher/: CMakeLists.txt  run.sh
src/ASTMatcher/lib/: CMakeLists.txt  ForDependencies.cpp
src/ASTVisitor/: .gitignore  run.sh
src/lib/: CMakeLists.txt  ForInfoTool.cpp
test/: sample1.cpp  sample2.cpp  sample3.cpp  sample5.cpp  setup.sh
test/samples/: sample11.cpp  sample12.cpp  sample5.cpp  sample8.cpp  sample9.cpp
test/simple/: sample12.cpp  sample13.cpp  sample7.cpp  sample8.cpp
test/src/: ForInfoTool.test.cpp  LoopInfoTool.test.cpp
test/tensilica/: sample2.cpp  sample3.cpp  (+1 more)
tool/: CMakeLists.txt  run.sh  sample9.cpp.out.txt  setup.sh
tool/src/: CMakeLists.txt  Complexity.cpp  ForInfoTool.cpp  Kernel.cpp  KernelVisitor.cpp  LoopInfoTool.cpp  Printer.cpp  TreeBuilder.cpp  main.cpp
(+32 files in other folders)
